--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
   "dependencies": {
     "axios": "^0.27.2",
     "modern-css-reset": "^1.4.0",
+    "reset-css": "^5.0.1",
+    "style-loader": "^3.3.1",
     "swiper": "^8.4.4",
     "the-new-css-reset": "^1.7.3"
   },
