--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,12 +15,6 @@
   },
   "plugins": ["prettier"],
   "rules": {
-    "indent": ["error", 4],
-    "prettier/prettier": [
-      "error",
-      {
-        "endOfLine": "auto"
-      }
-    ]
+    "indent": [2, 4]
   }
 }
