--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
   },
   "plugins": ["prettier"],
   "rules": {
-    "indent": [2, 4]
+    "indent": [2, 4],
+    "import/prefer-default-export": 0
   }
 }
