--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "html-webpack-plugin": "^5.5.0",
     "json-server": "^0.17.0",
+    "mark.js": "^8.11.1",
     "mini-css-extract-plugin": "^2.6.1",
     "postcss-loader": "^7.0.1",
     "prettier": "^2.7.1",
