--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "@fancyapps/ui": "^5.0.5",
     "axios": "^0.27.2",
     "modern-css-reset": "^1.4.0",
     "reset-css": "^5.0.1",
