--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,8 @@
   "plugins": ["prettier"],
   "rules": {
     "indent": [2, 4],
-    "import/prefer-default-export": 0
+    "import/prefer-default-export": 0,
+    "class-methods-use-this": 0,
+    "consistent-return": 0
   }
 }
